--- a/Practicas/practica1-ldd-1c2024.tex
+++ b/Practicas/practica1-ldd-1c2024.tex
@@ -214,7 +214,7 @@ w = np.array([1.2, np.pi, 4, 5])
 z = np.array([0,1])
 v * w
 v+2
-v+z
+v+z # Funcionara?
 \end{lstlisting}
 
 \item Explorar estas distintas formas de extraer información de un vector.
