--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -36,7 +36,8 @@
   stepnumber=5,                    % the step between two line-numbers. If it's 1, each line will be numbered
   stringstyle=\color{mymauve},     % string literal style
   tabsize=4,	                   % sets default tabsize to 2 spaces
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+  title=\lstname,                  % show the filename of files included with \lstinputlisting; also try caption instead of title
+  numbers=none
 }
 % Caracteres especiales
 \def\A{\mathbb{A}}
@@ -164,17 +165,16 @@ series1.valuecounts()
 
 \end{enumerate}
 
-\textbf{Data frames.} Un data frame es una representaci\'on de los datos en formato de tabla en la que cada columna son vectores del mismo tama\~no. Como cada columna es un vector, cada columna puede contener datos de un \'unico tipo. Se pueden pensar como variables. Cada variable corresponde a una serie de Pandas, y todas las series de un dataframe están indexadas por los mismos índices.
+\textbf{DataFrames.} Un DataFrame es una representaci\'on de los datos en formato de tabla donde las columnas son vectores del mismo tama\~no. Como cada columna es un vector, cada columna puede contener datos de un \'unico tipo. Se pueden pensar como variables. Cada variable corresponde a una serie de Pandas, y todas las series de un mismo DataFrame están indexadas por los mismos índices.
 
 \begin{enumerate}[resume]
-\item Una forma de crear un data frame es utilizando un ``diccionario''. Todas las variables del diccionario deben ser vectores o listas de la misma longitud. Ejecutar el siguiente c\'odigo.
+\item Una forma de crear un DataFrame es utilizando un ``diccionario''. Todas las variables del diccionario deben ser vectores o listas de la misma longitud. Ejecutar el siguiente c\'odigo.
 
 \begin{lstlisting}
-nombres = ["Rodrigo", "Sergio", "Cristina", "Diana"]
-data = {"altura": np.array([178, 172, 175, 168]), "peso": np.array([81.2, 76.1, 68.5, 64.0])}
+data = {"nombre": ["Rodrigo", "Sergio", "Cristina", "Diana"], "altura": np.array([178, 172, 175, 168]), "peso": np.array([81.2, 76.1, 68.5, 64.0])}
 display(data)
 
-pacientes = pd.DataFrame(data, index = nombres)
+pacientes = pd.DataFrame(data).set_index("nombre")
 display(pacientes)
 \end{lstlisting}
 
@@ -189,7 +189,9 @@ pacientes["altura"].Rodrigo
 \end{lstlisting}
     
     
-\item \textbf{Gapminder.} Cargar la biblioteca \lstinline{gapminder} utilizando
+\item \textbf{Gapminder.} A modo de ejemplo, vamos a explorar el dataset Gapminder que contiene datos poblacionales y de desarrollo humano de distintos países a lo largo del tiempo.
+    
+    Cargar la biblioteca \lstinline{gapminder} utilizando
 \begin{lstlisting}
 from gapminder import gapminder
 \end{lstlisting}
@@ -208,11 +210,11 @@ Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el 
 
 %\item ?`Cu\'ales son las variables? Usar el comando \lstinline{gapminder.columns.values}.
 
-\item Extraer la informaci\'on de Argentina, Uruguay y Chile y guardarla en un nuevo data frame \lstinline{gm_sur}. Sugerencia: recordar el método \lstinline{isin}.
+\item Extraer la informaci\'on de Argentina, Uruguay y Chile y guardarla en un nuevo DataFrame \lstinline{gm_sur}. Sugerencia: recordar el método \lstinline{isin()}.
 
 ?`Cu\'antas filas tiene? ?`Cu\'al es el primero y el \'ultimo a\~no para el cu\'al existen datos de Argentina en gapminder?
 
-\item ¿Cómo está indexado el DataFrame \lstinline{gm_sur}? Para acceder a una fila de un dataframe, podemos usar los métodos \lstinline{loc[]} y \lstinline{iloc[]}. ¿Cómo se usan? ¿Cuál es la diferencia entre los dos comandos?
+\item ¿Cómo está indexado el DataFrame \lstinline{gm_sur}? Para acceder a una fila de un DataFrame, podemos usar los métodos \lstinline{loc[]} y \lstinline{iloc[]}. ¿Cómo se usan? ¿Cuál es la diferencia entre los dos comandos?
 
 %\item ?`Qu\'e resulta de hacer gm.sur[,"pop"]? ?`Qu\'e resulta de hacer gm.sur[,-(1:3)]?
 
@@ -238,6 +240,8 @@ df
 df["confirmados_Nuevos"].plot()
 \end{lstlisting}
 
+\end{enumerate}
+
 \textbf{\large Estad\'istica descriptiva}
 \begin{enumerate}[resume]
 
@@ -247,7 +251,7 @@ df["confirmados_Nuevos"].plot()
 
 \item Supongamos que definimos una nueva variable que puede tomar los siguientes valores:
 \[
-nivelGDP = \begin{cases}
+\text{nivelGDP} = \begin{cases}
 0, & \text{si \lstinline{gdpPercap}} < 1600. \\
 1, & \text{si $1600 \le $ \lstinline{gdpPercap} $< 6600$}. \\
 2, & \text{en otro caso.} \\
@@ -261,7 +265,7 @@ nivelGDP = \begin{cases}
 
 \item Con el mismo filtro que el ejercicio anterior (es decir, s\'olo para el a\~no 2007), crear una variable $I$
  que valga 1 si \lstinline{gdpPercap} es mayor que 2000 d\'olares y 0 si no lo es. Luego crear una tabla de 2 filas y 5 columnas que calcule la cantidad de pa\'ises donde $I = 0$ o $I = 1$
- en cada continente. 
+ en cada continente. Ayuda: si tenemos la información por columnas, podemos convertirla a una tabla con la función \lstinline{unstack()}.
 
 %\item Convertir el vector colores a factor y comprobar que funcion\'o usando la funci\'on \lstinline{class()}. Verificar las categor\'ias creadas usando la funci\'on \lstinline{levels()}.
 %\begin{lstlisting}
@@ -300,7 +304,6 @@ nivelGDP = \begin{cases}
 %datos
 %\end{lstlisting}
 
-\end{enumerate}
 
 \end{document}
 
