Agregué dos ejercicios de media y mediana a la Práctica 2

--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -272,6 +272,20 @@ df["confirmados_Nuevos"].plot()
 %colores <- c('blue', 'red', 'green', 'red', 'black', 'yellow','blue','blue')
 %\end{lstlisting}
 
+\item En el gráfico vemos 10 puntos. Consideramos la media y mediana de la coordenada $x$ de esos puntos y graficamos dos rectas verticales $x = $ media y $x = $ mediana. ¿Cuál recta corresponde a la media y cuál a la mediana?
+
+\begin{center}
+\includegraphics[scale=0.6]{practica2-img-media_mediana_1.png}
+\end{center}
+
+\item Repetimos el mismo procedimiento con otros 30 puntos. Graficamos una línea azul para la media y una línea naranja para la mediana. ¿Cuál gráfico es correcto?
+
+\begin{center}
+\includegraphics[scale=0.5]{practica2-img-media_mediana_2.png}
+\includegraphics[scale=0.5]{practica2-img-media_mediana_3.png}
+\end{center}
+
+
 \item Definir funciones que calculen la media y mediana de un vector de valores numéricos y la moda de un vector de valores categóricos. ?`Qu\'e tiene que pasar para que existan dos modas?
 
 \item Probar las funciones definidas con las variables numéricas y categóricas del dataset \lstinline{gapminder} utilizando solo los datos del año 2007.
