Slides de la clase 2: estadística descriptiva

--- a/Slides/clase02-estadisticaDescriptiva-slides.tex
+++ b/Slides/clase02-estadisticaDescriptiva-slides.tex
@@ -12,6 +12,7 @@
 \pagestyle{empty}
 
 \usepackage{pgf,tikz}
+\usepackage{pgfplots}
 \usetikzlibrary{matrix}
 \usetikzlibrary{arrows}
 
@@ -169,7 +170,7 @@
  \begin{center}
 
 \Large\textbf{Laboratorio de Datos} \\
-\large\textbf{Información general}
+\large\textbf{Estadística descriptiva}
 %\vspace{0.5cm}
 
 % \textit{Santiago Laplagne} \\
@@ -183,8 +184,8 @@
 Primer Cuatrimestre 2024 \\ Turnos tarde y noche
 
 \vspace{1cm}
- 
- 
+
+
  {\small Facultad de Ciencias Exactas y Naturales, UBA}
  \end{center}
 
@@ -194,23 +195,55 @@ Primer Cuatrimestre 2024 \\ Turnos tarde y noche
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Docentes}
-
-{\large Turno tarde}
-
+\frametitle{Variables Categóricas vs Numéricas}
+\begin{block}{Variables Categóricas}
+Son variables que representan diferentes categorías o grupos. 
+Las variables categóricas se pueden dividir en dos tipos: nominal y ordinal.
 \begin{itemize}
-\item Darío Elías (ayudante de primera)
-\item Nazareno Fallace (ayudante de primera)
-\item Santiago Laplagne (profesor)
+    \item \textbf{Nominal:} No tienen un orden intrínseco.
+    \item \textbf{Ordinal:} Tienen un orden intrínseco.
+\end{itemize}
+\end{block}
+\end{frame}
+
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Ejemplos}
+\begin{itemize}
+    \item \textbf{Variable Categórica:}
+    \begin{itemize}
+        \item Nominal: Color de los ojos
+        \begin{itemize}
+            \item Azul
+            \item Marrón
+            \item Verde
+            \item Gris
+        \end{itemize}
+        \item Ordinal: Nivel de educación
+        \begin{itemize}
+            \item Primaria
+            \item Secundaria
+            \item Universitaria
+            \item Posgrado
+        \end{itemize}
+    \end{itemize}
 \end{itemize}
 
-{\large Turno noche}
+\end{frame}
 
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Variables Categóricas vs Numéricas}
+\begin{block}{Variables Numéricas}
+Son variables que representan cantidades numéricas.
+Las variables numéricas se pueden dividir en dos tipos: discreta y continua.
 \begin{itemize}
-\item Gonzalo Barrera Borla (ayudante de primera)
-\item Nazareno Fallace (ayudante de primera)
-\item Santiago Laplagne (profesor)
+    \item \textbf{Discreta:} Representa valores contables y no puede tomar valores intermedios.
+    \item \textbf{Continua:} Representa medidas y puede tomar cualquier valor dentro de un rango.
 \end{itemize}
+\end{block}
 
 \end{frame}
 
@@ -225,163 +258,132 @@ Primer Cuatrimestre 2024 \\ Turnos tarde y noche
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Vacantes}
-
+\frametitle{Ejemplos}
 \begin{itemize}
-\item ¿A todos los presentes les llegó un mail confirmando la vacante?
-\item Si no pueden cursar, avisen a la brevedad porque hay inscriptos en lista de espera.
+    \item \textbf{Variable Numérica:}
+    \begin{itemize}
+        \item Discreta: Número de hijos
+        \begin{itemize}
+            \item 0
+            \item 1
+            \item 2
+            \item 3
+        \end{itemize}
+        \item Continua: Altura (en metros)
+        \begin{itemize}
+            \item 1.60
+            \item 1.75
+            \item 1.82
+            \item 1.68
+        \end{itemize}
+    \end{itemize}
 \end{itemize}
 
 \end{frame}
 
+
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Estructura de la materia}
+\frametitle{Medidas de tendencia central: media y mediana}
+\begin{block}{Media}
+La media es el promedio de un conjunto de datos y se calcula sumando todos los valores y dividiéndolos por el número total de valores.
+\[ \text{Media} = \frac{x_1 + x_2 + \dots + x_n}{n} = \frac{\sum_{i=1}^{n} x_i}{n} \]
+\end{block}
 
+\begin{block}{Mediana}
+La mediana es el valor del medio cuando un conjunto de datos se ordena de menor a mayor. Si hay una cantidad par de datos, se toma el promedio entre los dos valores del medio.
+\end{block}
+\end{frame}
+
+%------------------------------------------------------------------
+
+\begin{frame}
+\frametitle{Ejemplos Numéricos}
+\begin{block}{Conjunto de datos 1: $2, 6, 8, 10, 9$}
 \begin{itemize}
-\item Teórico-práctica
-\item Laboratorio 1108 (turno tarde) y laboratorio 1111 (turno noche)
-\item Python
-\item Para aprobar la materia es necesario:
-\begin{enumerate}
-\item Asistir al 80\% de las clases.
-\item Trabajar en clase.
-\item Aprobar 2 TPs grupales (nota mayor o igual a 4).
-\item Aprobar el parcial individual (nota mayor o igual a 6).
-\end{enumerate}
-\item $\text{Nota final} = 0.6 \times \text{nota parcial} + 0.2 \times \text{nota TP1} + 0.2 \times \text{nota TP2} +x$, donde
-$$
-x = \begin{cases}
-1 & \text{si el promedio de los TPs es mayor o igual a 8,} \\
-0 & \text{si el promedio de los TPs es menor a 8.}
-\end{cases}
-$$
+    \item Media:
+    \[ \frac{2+6+8+10+9}{5} = \frac{35}{5} = 7 \]
+    \item Mediana: ordenamos de menor a mayor $2, 6, 8, 9, 10$
+    
+    La mediana es 8.
 \end{itemize}
+\end{block}
 
-\end{frame}
-
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Material, información y comunicación}
-
+\begin{block}{Conjunto de datos 2: $2, 6, 8, 50, 9$}
 \begin{itemize}
-\item Campus de la materia
-\item Github (https://github.com/fcen-amateur/ldd)
-\item Telegram
+    \item Media:
+    \[ \frac{2+6+8+50+9}{5} = \frac{75}{5} = 15 \]
+    \item Mediana: ordenamos de menor a mayor $2, 6, 8, 9, 50$
+    
+    La mediana es 8.
 \end{itemize}
+\end{block}
 \end{frame}
 
-%------------------------------------------------------------------
-
 \begin{frame}
-\frametitle{Fechas importantes}
+\frametitle{Diferencia entre Media y Mediana: Outliers}
 
+Un outlier o valor atípico es una observación dentro de una muestra que no es consistente con el resto.
+
+\begin{block}{Media}
+La media es sensible a los valores atípicos (outliers), ya que se calcula sumando todos los valores y dividiéndolos por el número total de valores.
 \begin{itemize}
-\item Entrega del primer TP: martes 21/05
-\item Entrega del segundo TP: martes 18/06
-\item Parcial: viernes 14/06
-\item Recuperatorio del parcial: martes 25/06
+    \item Si hay outliers, la media puede sesgarse significativamente hacia los valores extremos.
 \end{itemize}
+\end{block}
 
-\end{frame}
-
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{¿Qué es la ciencia de datos?}
-
+\begin{block}{Mediana}
+La mediana no se ve afectada por los valores atípicos, ya que es el valor central de un conjunto de datos ordenados.
 \begin{itemize}
-\item Se define por las preguntas que se hace: es la ciencia que usa datos para describir, explicar y predecir.
-\item No se define por las técnicas: no es la ciencia que usa deep learning.
+    \item Es más robusta frente a valores extremos que la media.
 \end{itemize}
-
+\end{block}
 \end{frame}
 
 %------------------------------------------------------------------
 
 \begin{frame}
-\frametitle{Taxonomía de preguntas}
-
-\begin{itemize}
-\item \textbf{Descriptiva:} Resumir características de un data set. Sin interpretación, como atributos de los datos.
-\item \textbf{Exploratorias:} Buscar patrones, tendencias, relaciones entre variables. Sirve para generar hipótesis
-\item \textbf{Inferenciales:} Evaluar hipotesis, respecto a un patrón encontrado en un análisis exploratorio.
-\item \textbf{Predictivas:} Adivinar qué va a suceder, sin importar la causa.
-\item \textbf{Causales:} ¿Cambiar una variable, cambia el valor de otra variable?
-\item \textbf{Mecanísticas:} ¿Cómo ocurre?
-\end{itemize}
-
-\end{frame}
-
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Objetivos generales de la materia}
-
-¿Cómo trabajar con datos?
-
-\begin{itemize}
-\item Organización de datos.
-\item Visualización, descripción y análisis exploratorio de datos.
-\item Modelado de datos (modelos explicativos y predictivos).
-\end{itemize}
-
-\end{frame}
-
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Programa}
-
-Algunos de los temas que trataremos en esta materia, en orden cronológico, serán los siguientes:
-
-{\scriptsize
-\begin{enumerate}
-\item Introudcción a Python y Numpy
-\item Python: lectura de archivos con Pandas, dataframes
-\item Introducción a GitHub
-\item Python: elaboración de gráficos
-\item Mínimos cuadrados y regresión lineal
-\item Introducción al modelado: datos de entrenamiento, validación y prueba
-\item Mínimos cuadrados regularizados
-\item Limpieza de datos, variables categóricas, datos faltantes
-\item Normalización de datos
-\item Aprendizaje no supervisado: clustering
-\item Valores singulares y componentes principales
-\item Aplicaciones de componentes principales
-\item Optimización no lineal - Método del descenso
-\item Introducción a Redes neuronales
-\end{enumerate}
-}
-\end{frame}
-
-%------------------------------------------------------------------
-
-\begin{frame}
-\frametitle{Ejemplo: ajuste de funciones}
+\frametitle{Media y mediana}
 
 \begin{center}
-\includegraphics[scale=.35]{01-ET_lyftWoAA-gFt.png}
-\includegraphics[scale=.35]{01-ET_l3SQXsAUhAKA.png}
+\includegraphics[scale=0.6]{clase2-img-alturas.png}
 \end{center}
-
 \end{frame}
-
 
 %------------------------------------------------------------------
 
 \begin{frame}
+\frametitle{Varianza y desvío Estándar}
+\begin{block}{Definición}
+La varianza y el desvío estándar son \emph{medidas de dispersión} que indican cuánto varían los valores de un conjunto de datos respecto a la media.
+\end{block}
 
-\begin{center}
-¡Largamos!
+\begin{block}{Fórmula}
+La varianza se calcula mediante la fórmula:
+\[ \text{varianza} = \frac{\sum_{i=1}^{n}(x_i - \mu)^2}{n}, \]
+donde $\mu$ es la media de los datos.
 
-\includegraphics[scale=.5]{seatbelt.jpg}
+El desvío se calcula como la raíz cuadrada de la varianza:
+\[ \sigma = \sqrt{\frac{\sum_{i=1}^{n}(x_i - \mu)^2}{n}}. \]
+\end{block}
+\end{frame}
 
+\begin{frame}
+\frametitle{Interpretación}
+\begin{itemize}
+    \item Un desvío estándar pequeño indica que los datos están cercanos a la media.
+    \item Un desvío estándar grande indica que los datos están dispersos y alejados de la media.
+\end{itemize}
 
-\end{center}
-
+\begin{block}{Ejemplo}
+Consideramos el siguiente conjunto de datos: $1, 2, 3, 4, 5$
+\begin{itemize}
+    \item Media ($\mu$): 3
+    \item Varianza: $\frac{2^2 + 1^2 + 0 + 1^2 + 2^2}{5} = 2$
+    \item Desvío Estándar ($\sigma$): $\sqrt{2} = 1.41$
+\end{itemize}
+\end{block}
 \end{frame}
 
 %------------------------------------------------------------------
