--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -189,7 +189,7 @@ pacientes["altura"].Rodrigo
 \end{lstlisting}
     
     
-\item \textbf{Gapminder.} A modo de ejemplo, vamos a explorar el dataset Gapminder que contiene datos poblacionales y de desarrollo humano de distintos países a lo largo del tiempo.
+\item \textbf{Gapminder.} A modo de ejemplo, vamos a explorar el DataFrame \lstinline{gapminder} que contiene datos poblacionales y de desarrollo humano de distintos países a lo largo del tiempo.
     
     Cargar la biblioteca \lstinline{gapminder} utilizando
 \begin{lstlisting}
@@ -201,9 +201,9 @@ pip install gapminder
 \end{lstlisting}
 Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el comando con algunos de estos comandos: \lstinline{display(gapminder)}, \lstinline{gapminder.info()}, \lstinline{gapminder.head()}, \lstinline{gapminder.tail()}.
 
-\item ?`De qué clase es el objeto \lstinline{gapminder}? ?`Qu\'e variables tiene el dataset \lstinline{gapminder} y de qu\'e clase son? ?`Qu\'e \'indices usa?
+\item ?`De qué clase es el objeto \lstinline{gapminder}? ?`Qu\'e variables tiene el DataFrame \lstinline{gapminder} y de qu\'e clase son? ?`Qu\'e \'indices usa?
 
-\item Explorar el tama\~no del dataset gapminder usando la función \lstinline{shape()}.
+\item Explorar el tama\~no del DataFrame \lstinline{gapminder} usando la función \lstinline{shape()}.
 
 \item ?`De cu\'antos pa\'ises hay datos? Ayuda: averiguar qu\'e hacen los métodos \lstinline{unique()} y \lstinline{nunique()} aplicados a series.
 
@@ -212,7 +212,7 @@ Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el 
 
 \item Extraer la informaci\'on de Argentina, Uruguay y Chile y guardarla en un nuevo DataFrame \lstinline{gm_sur}. Sugerencia: recordar el método \lstinline{isin()}.
 
-?`Cu\'antas filas tiene? ?`Cu\'al es el primero y el \'ultimo a\~no para el cu\'al existen datos de Argentina en gapminder?
+?`Cu\'antas filas tiene? ?`Cu\'al es el primero y el \'ultimo a\~no para el cu\'al existen datos de Argentina en \lstinline{gapminder}?
 
 \item ¿Cómo está indexado el DataFrame \lstinline{gm_sur}? Para acceder a una fila de un DataFrame, podemos usar los métodos \lstinline{loc[]} y \lstinline{iloc[]}. ¿Cómo se usan? ¿Cuál es la diferencia entre los dos comandos?
 
@@ -247,7 +247,7 @@ df["confirmados_Nuevos"].plot()
 
 \item Dar tres ejemplos de variables categ\'oricas y num\'ericas.
 
-\item En el dataset \lstinline{gapminder}, una de las variables es el producto bruto per capita de los pa\'ises (gdpPercap). ?`Es una variable categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)?
+\item En el DataFrame \lstinline{gapminder}, una de las variables es el producto bruto per capita de los pa\'ises (gdpPercap). ?`Es una variable categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)?
 
 \item Supongamos que definimos una nueva variable que puede tomar los siguientes valores:
 \[
@@ -261,7 +261,7 @@ df["confirmados_Nuevos"].plot()
  es categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)? ?`Cambia la respuesta si la variable
  toma valores ``bajo'', ``medio'' y ``alto'' en lugar de 0, 1, 2?
 
-\item Filtrar el dataset de \lstinline{gapminder} para el a\~no 2007. Luego, para ese a\~no, calcular la cantidad de pa\'ises en cada continente. Explorar las funciones \lstinline{groupBy}, \lstinline{size}, \lstinline{nunique}.
+\item Filtrar el DataFrame de \lstinline{gapminder} para el a\~no 2007. Luego, para ese a\~no, calcular la cantidad de pa\'ises en cada continente. Explorar las funciones \lstinline{groupBy}, \lstinline{size}, \lstinline{nunique}.
 
 \item Con el mismo filtro que el ejercicio anterior (es decir, s\'olo para el a\~no 2007), crear una variable $I$
  que valga 1 si \lstinline{gdpPercap} es mayor que 2000 d\'olares y 0 si no lo es. Luego crear una tabla de 2 filas y 5 columnas que calcule la cantidad de pa\'ises donde $I = 0$ o $I = 1$
@@ -272,13 +272,13 @@ df["confirmados_Nuevos"].plot()
 %colores <- c('blue', 'red', 'green', 'red', 'black', 'yellow','blue','blue')
 %\end{lstlisting}
 
-\item En el gráfico vemos 10 puntos. Consideramos la media y mediana de la coordenada $x$ de esos puntos y graficamos dos rectas verticales $x = $ media y $x = $ mediana. ¿Cuál recta corresponde a la media y cuál a la mediana?
+\item En el gráfico vemos 11 puntos. Consideramos la media y mediana de la coordenada $x$ de esos puntos y graficamos dos rectas verticales $x = $ media y $x = $ mediana. ¿Cuál recta corresponde a la media y cuál a la mediana?
 
 \begin{center}
 \includegraphics[scale=0.6]{practica2-img-media_mediana_1.png}
 \end{center}
 
-\item Repetimos el mismo procedimiento con otros 30 puntos. Graficamos una línea azul para la media y una línea naranja para la mediana. ¿Cuál gráfico es correcto?
+\item Repetimos el mismo procedimiento con otros 30 puntos. Graficamos una línea azul para la media y una línea naranja para la mediana. Uno de los dos gráficos es correcto, ¿cuál?
 
 \begin{center}
 \includegraphics[scale=0.5]{practica2-img-media_mediana_2.png}
@@ -286,15 +286,15 @@ df["confirmados_Nuevos"].plot()
 \end{center}
 
 
-\item Definir funciones que calculen la media y mediana de un vector de valores numéricos y la moda de un vector de valores categóricos. ?`Qu\'e tiene que pasar para que existan dos modas?
+\item Definir funciones que calculen la media y mediana de un vector de valores numéricos.
 
-\item Probar las funciones definidas con las variables numéricas y categóricas del dataset \lstinline{gapminder} utilizando solo los datos del año 2007.
+\item Probar las funciones definidas con las variables numéricas utilizando solo los datos del año 2007.
 
 \item Graficar el producto bruto interno promedio en América en función del año.
 
-\item Definir desv\'io est\'andar. ?`Por qu\'e la diferencia en el numerador est\'a elevada al cuadrado? Escribir una funci\'on de Python que calcule el desv\'io est\'andar. Comparar el resultado de usar la funci\'on \lstinline{np.std()}.
+\item Definir desv\'io est\'andar. ?`Por qu\'e las diferencias en el numerador est\'an elevada al cuadrado? Escribir una funci\'on de Python que calcule el desv\'io est\'andar. Comparar el resultado de usar la funci\'on \lstinline{np.std()}.
 
-\item Calcular el mínimo, el máximo y el desv\'io estandar de la expectativa de vida (\lstinline{lifeExp}) entre pa\'ises tomando s\'olo el dataset \lstinline{gapminder} para el a\~no 2007.
+\item Calcular el mínimo, el máximo y el desv\'io estandar de la expectativa de vida (\lstinline{lifeExp}) entre pa\'ises tomando s\'olo el DataFrame \lstinline{gapminder} para el a\~no 2007.
 \end{enumerate}
 
 %\textbf{\large Archivos de datos}
