Corrige un pequeño error en la Practica 2
En el ejercicio 5, en vez de series1.valuecounts() debe ir series1.value_counts()

--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -160,7 +160,7 @@ obj2 * 3
 \begin{lstlisting}
 series1 = pd.Series(["a", "b", "c", "b", "a", "c"])
 series1.isin(["b", "c"])
-series1.valuecounts()
+series1.value_counts()
 \end{lstlisting}
 
 \end{enumerate}
