--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -266,9 +266,9 @@ df["confirmados_Nuevos"].plot()
 \item Con el mismo filtro que el ejercicio anterior (es decir, s\'olo para el a\~no 2007), crear una variable $gdpAlto$
  que valga 1 si \lstinline{gdpPercap} es mayor que 2000 d\'olares y 0 si no lo es. Luego crear una tabla de 2 filas y 5 columnas que calcule la cantidad de pa\'ises donde $gdpAlto = 0$ o $gdpAlto = 1$  en cada continente. 
  
- Ayuda 1: para convertir un array de variables booleanas a 0/1 podemo usar \lstinline{.astype(int)} (o en este ejercicio podemos usar una variable booleana en vez de 0/1).
+ Ayuda 1: para convertir un array de variables booleanas a 0/1 pueden usar \lstinline{.astype(int)} (o en este ejercicio pueden usar una variable booleana en vez de 0/1).
  
- Ayuda 2: si tenemos la informaci\'on por columnas, podemos convertirla a una tabla con la funci\'on \lstinline{unstack()}.
+ Ayuda 2: si tenemos informaci\'on agrupada por 2 columnas, podemos convertirla a una tabla con la funci\'on \lstinline{unstack()}.
 
 %\item Convertir el vector colores a factor y comprobar que funcion\'o usando la funci\'on \lstinline{class()}. Verificar las categor\'ias creadas usando la funci\'on \lstinline{levels()}.
 %\begin{lstlisting}
