--- a/Practicas/practica2-ldd-1c2024.tex
+++ b/Practicas/practica2-ldd-1c2024.tex
@@ -36,7 +36,8 @@
   stepnumber=5,                    % the step between two line-numbers. If it's 1, each line will be numbered
   stringstyle=\color{mymauve},     % string literal style
   tabsize=4,	                   % sets default tabsize to 2 spaces
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+  title=\lstname,                  % show the filename of files included with \lstinputlisting; also try caption instead of title
+  numbers=none
 }
 % Caracteres especiales
 \def\A{\mathbb{A}}
@@ -107,96 +108,116 @@
  \hrule
 
  \bigskip
- \centerline{\bf Práctica N$^\circ$ 2: Estad\'istica descriptiva y visualizaci\'on de datos.}
+ \centerline{\bf Práctica N$^\circ$ 2: Estad\'istica descriptiva}
  \bigskip
 
 
-\textbf{\bf Data frames}
+\textbf{\large Estructuras de datos en Pandas}
 
-Un data frame es una representaci\'on de los datos en formato de tabla en la que cada columna son vectores del mismo tamaño. Como cada columna es un vector, cada columna puede contener datos de un \'unico tipo. Se pueden pensar como variables.
+\vspace{0.2cm}
+
+\textbf{Series.} Las series de Pandas son vectores similares a los arrays de NumPy, que podemos indexar usando etiquetas.
 
 \begin{enumerate}
-\item Una forma de crear un data frame es utilizando un ``diccionario''. Todas las variables del diccionario deben ser vectores o listas de la misma longitud. Ejecutar el siguiente c\'odigo.
+\item Crear la siguiente Series, observar qué devuelve \lstinline{array} e \lstinline{index} e interpretar.
+
+\begin{lstlisting}
+import pandas as pd
+obj = pd.Series([7,4,-5,3])
+display(obj)
+display(obj.array)
+display(obj.index)  # Por default, los indices van de 0 a N-1.
+\end{lstlisting}
+
+\item Podemos asignar etiquetas (o \'indices) a cada valor de la serie.
+\begin{lstlisting}
+obj2 = pd.Series([np.pi,0,-2,1.41], index = ["d", "b", "c", "a"])
+display(obj2)
+display(obj2.array)
+display(obj2.index)
+\end{lstlisting}
+
+\item Al igual que con arrays de Numpy podemos acceder a los elementos por su posici\'on, o podemos usar las etiquetas. Ejecutar los siguientes comandos.
+\begin{lstlisting}
+obj2["a"]
+obj2[3]
+obj2[1:3]
+
+obj3 = obj2[["a","b"]]
+obj3
+obj3.index
+
+obj2[obj2>1]
+\end{lstlisting}
+
+\item Las operaciones que pueden aplicarse a numpy arrays pueden aplicarse tambi\'en a series de Pandas, conservando los \'indices.
+\begin{lstlisting}
+np.exp(obj2)
+obj2 * 3
+\end{lstlisting}
+
+\item \textbf{M\'etodos de series.} Ejecutar los siguientes comandos e interpretar qu\'e hace cada uno.
+\begin{lstlisting}
+series1 = pd.Series(["a", "b", "c", "b", "a", "c", "c", "x"])
+series1.isin(["b", "c"])
+series1.value_counts()
+\end{lstlisting}
+
+\end{enumerate}
+
+\textbf{DataFrames.} Un DataFrame es una representaci\'on de los datos en formato de tabla donde las columnas son vectores del mismo tama\~no. Como cada columna es un vector, cada columna puede contener datos de un \'unico tipo. Se pueden pensar como variables. Cada variable corresponde a una serie de Pandas, y todas las series de un mismo DataFrame est\'an indexadas por los mismos \'indices.
+
+\begin{enumerate}[resume]
+\item Una forma de crear un DataFrame es utilizando un ``diccionario''. Todas las variables del diccionario deben ser vectores o listas de la misma longitud. Ejecutar el siguiente c\'odigo.
 
 \begin{lstlisting}
 data = {"nombre": ["Rodrigo", "Sergio", "Cristina", "Diana"], "altura": np.array([178, 172, 175, 168]), "peso": np.array([81.2, 76.1, 68.5, 64.0])}
 display(data)
 
-pacientes = pd.DataFrame(data)
+pacientes = pd.DataFrame(data).set_index("nombre")
 display(pacientes)
 \end{lstlisting}
 
-\item ?`Cuál es la clase del objeto \lstinline{pacientes}? ?`Cuál es la clase de cada uno de los vectores columna? (para saber la clase de un objeto, utilizar el comando \lstinline{type}, para saber el tipo de datos de un array de numpy, utilizar \lstinline{np.dtype})
+\item ?`Cu\'al es la clase del objeto \lstinline{pacientes}? ?`Cu\'al es la clase de cada uno de los vectores columna? (para saber la clase de un objeto, utilizar el comando \lstinline{type}, para saber el tipo de datos de un array de numpy, utilizar \lstinline{np.dtype})
 
 \item Guardar en una variable nueva el vector columna \lstinline{altura}. Pueden utilizar \lstinline{pacientes["altura"]} o \lstinline{pacientes.altura} (la primera opci\'on es preferible, la segunda puede dar error si el nombre coincide con alguna funci\'on ya existente).
 
-\item Cargar la biblioteca \lstinline{gapminder} utilizando
+\item A diferencia de las matrices en Numpy, un DataFrame de Pandas es un conjunto de columnas, no de filas. Pensar cu\'al de los dos comandos ser\'a correcto antes de ejecutarlos.
+\begin{lstlisting}
+pacientes["Rodrigo"].altura
+pacientes["altura"].Rodrigo
+\end{lstlisting}
+
+
+\item \textbf{Gapminder.} A modo de ejemplo, vamos a explorar el DataFrame \lstinline{gapminder} que contiene datos poblacionales y de desarrollo humano de distintos pa\'ises a lo largo del tiempo.
+
+    Cargar la biblioteca \lstinline{gapminder} utilizando
 \begin{lstlisting}
 from gapminder import gapminder
 \end{lstlisting}
-
 Si da error es posible que no est\'e instalado. En tal caso ejecuten primero
 \begin{lstlisting}
 pip install gapminder
 \end{lstlisting}
+Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el comando con algunos de estos comandos: \lstinline{display(gapminder)}, \lstinline{gapminder.info()}, \lstinline{gapminder.head()}, \lstinline{gapminder.tail()}.
 
-Esto crea un nuevo objeto \lstinline{gapminder}. Pueden ver el contenido con el comando \lstinline{display(gapminder)} o las primeras filas utilizando \lstinline{gapminder.head()}.
+\item ?`De qu\'e clase es el objeto \lstinline{gapminder}? ?`Qu\'e variables tiene el DataFrame \lstinline{gapminder} y de qu\'e clase son? ?`Qu\'e \'indices usa?
 
-\item ?`De qué clase es el objeto \lstinline{gapminder}? ?`Qu\'e variables tiene el dataset \lstinline{gapminder} y de qu\'e clase son?
+\item Explorar el tama\~no del DataFrame \lstinline{gapminder} usando la funci\'on \lstinline{shape()}.
 
-\item ?`De cu\'antos pa\'ises hay datos? Ayuda: averiguar qu\'e hacen la funci\'on \lstinline{unique()} y \lstinline{nunique()}.
+\item ?`De cu\'antos pa\'ises hay datos? Ayuda: averiguar qu\'e hacen los m\'etodos \lstinline{unique()} y \lstinline{nunique()} aplicados a series.
 
-\item Explorar el tama\~no del dataset gapminder usando la función \lstinline{shape()}.
 
-\item ?`Cu\'ales son las variables? Usar el comando \lstinline{gapminder.columns.values}.
+%\item ?`Cu\'ales son las variables? Usar el comando \lstinline{gapminder.columns.values}.
 
-\item Extraer la informaci\'on de Argentina, Uruguay y Chile y guardarla en un nuevo data frame \lstinline{gm.sur}. Sugerencia: \lstinline{np.isin}.
+\item Extraer la informaci\'on de Argentina, Uruguay y Chile y guardarla en un nuevo DataFrame \lstinline{gm_sur}. Sugerencia: recordar el m\'etodo \lstinline{isin()}.
 
-?`Cu\'antas filas tiene? ?`Cu\'al es el primero y el \'ultimo a\~no para el cu\'al existen datos de Argentina en gapminder?
+?`Cu\'antas filas tiene? ?`Cu\'al es el primer y el \'ultimo a\~no para el cu\'al existen datos de Argentina en \lstinline{gapminder}?
+
+\item ?`C\'omo est\'a indexado el DataFrame \lstinline{gm_sur}? Para acceder a una fila de un DataFrame, podemos usar los m\'etodos \lstinline{loc[]} y \lstinline{iloc[]}. ?`C\'omo se usan? ?`Cu\'al es la diferencia entre los dos comandos?
 
 %\item ?`Qu\'e resulta de hacer gm.sur[,"pop"]? ?`Qu\'e resulta de hacer gm.sur[,-(1:3)]?
 
-\end{enumerate}
-
-\textbf{\large Estad\'istica descriptiva}
-\begin{enumerate}[resume]
-
-\item Dar tres ejemplos de variables categ\'oricas y num\'ericas.
-
-\item En el dataset \lstinline{gapminder} del paquete hom\'onimo, una de las variables es el producto bruto per capita de los pa\'ises (gdpPercap). ?`Es una variable categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)?
-
-\item Supongamos que definimos una nueva variable que puede tomar los siguientes valores:
-\[
-I.gdp = \begin{cases}
-0, & \text{si \lstinline{gdpPercap}} < 1600. \\
-1, & \text{si $1600 \le $ \lstinline{gdpPercap} $< 6600$}. \\
-2, & \text{en otro caso.} \\
-\end{cases}
-\]
-?`La nueva variable
- es categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)? ?`Cambia la respuesta si la variable
- toma valores ``bajo'', ``medio'' y ``alto'' en lugar de 0, 1, 2?
-
-\item Filtrar el dataset de \lstinline{gapminder} para el a\~no 2007. Luego, para ese a\~no, calcular la cantidad de pa\'ises en cada continente. Explorar las funciones aplicables a DataFrame: \lstinline{groupBy}, \lstinline{size}, \lstinline{nunique}.
-
-\item Con el mismo filtro que el ejercicio anterior (es decir, s\'olo para el a\~no 2007), crear una variable
- que valga 1 si \lstinline{gdpPercap} es mayor que 2000 d\'olares y 0 si no lo es. Luego crear una tabla de 2 filas y 5 columnas que calcule la cantidad de pa\'ises donde $I = 0$ o $I = 1$
- en cada continente.
-
-%\item Convertir el vector colores a factor y comprobar que funcion\'o usando la funci\'on \lstinline{class()}. Verificar las categor\'ias creadas usando la funci\'on \lstinline{levels()}.
-%\begin{lstlisting}
-%colores <- c('blue', 'red', 'green', 'red', 'black', 'yellow','blue','blue')
-%\end{lstlisting}
-
-\item Definir funciones que calculen la media y mediana de un vector de valores numéricos y la moda de un vector de valores categóricos. ?`Qu\'e tiene que pasar para que existan dos modas?
-
-\item Probar las funciones definidas con las variables numéricas y categóricas del dataset gapminder utilizando solo los datos del año 2007.
-
-\item Graficar el producto bruto interno promedio en América en función del año.
-
-\item Definir desv\'io est\'andar. ?`Por qu\'e la diferencia en el numerador est\'a elevada al cuadrado? Escribir una funci\'on de Python que calcule el desv\'io est\'andar. Comparar el resultado de usar la funci\'on \lstinline{np.std()}.
-
-\item Calcular el mínimo, el máximo, el y el desv\'io estandar de la expectativa de vida (\lstinline{lifeExp}) entre pa\'ises tomando s\'olo el dataset \lstinline{gapminder} para el a\~no 1952.
 \end{enumerate}
 
 \textbf{\large Archivos de datos}
@@ -207,135 +228,99 @@ I.gdp = \begin{cases}
 \begin{enumerate}
 \item Leer el archivo \lstinline{casos_coronavirus.csv}.
 \item Graficar la curva de casos por d\'ia.
-\item Graficar la curva de casos acumulados.
+\item Graficar la curva de casos acumulados (utilizar la funci\'on \lstinline{cum_sum} para calcularlos.
 \item Definir $y$ como el logaritmo de la cantidad de casos acumulados y graficar $y$ en funci\'on de la cantidad de d\'ias transcurridos.
-\item Tomando dos valores, estimar la pendiente de la recta para los datos a partir del dia 30.
 \end{enumerate}
-
-Utilicen el siguiente c\'odigo para leer el archivo.
+Utilicen el siguiente c\'odigo para leer el archivo y graficar.
 
 \begin{lstlisting}
-import pandas as pd
-datos = pd.read_csv("casos_coronavirus.csv")   # dataFrame
-datos
+df = pd.read_csv("casos_coronavirus.csv")   # dataFrame
+df
+
+df["confirmados_Nuevos"].plot()
 \end{lstlisting}
 
 \end{enumerate}
 
-\textbf{\large Visualizaci\'on}
-
+\textbf{\large Estad\'istica descriptiva}
 \begin{enumerate}[resume]
-\item Ten\'es datos de una encuesta realizada en distintas provincias de Argentina y quer\'es saber cu\'antas personas respondieron a la encuesta en cada provincia. ?`Hac\'es un gr\'afico de l\'ineas, de dispersi\'on (scatter), histograma o un gr\'afico de barras (bar plot)? Hac\'e a mano en tu cuaderno c\'omo esper\'as que se vea el gr\'afico.
 
-\item Est\'as estudiando la relaci\'on entre altura y peso de las personas. Ten\'es un data-set que tiene como variables la edad, sexo y peso de cada persona. Si quer\'es describir estas variables por separado, ?`qu\'e gr\'afico har\'ias para cada una? ?`y si quer\'es visualizar la relaci\'on entre peso y altura? Hac\'e a mano en tu cuaderno c\'omo esper\'as que se vea el gr\'afico.
+\item Dar tres ejemplos de variables categ\'oricas y num\'ericas.
 
-\item Hac\'e un gr\'afico de barras que muestre la cantidad de pa\'ises hay en cada continente seg\'un los datos de gapminder (recordar el ejercicio 1.4)
+\item En el DataFrame \lstinline{gapminder}, una de las variables es el producto bruto per capita de los pa\'ises (gdpPercap). ?`Es una variable categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)?
 
-\item Quer\'es investigar c\'omo var\'ia la expectativa de vida entre los continentes. Para eso necesit\'as un gr\'afico como el siguiente:
+\item Supongamos que definimos una nueva variable que puede tomar los siguientes valores:
+\[
+\text{nivelGDP} = \begin{cases}
+0, & \text{si \lstinline{gdpPercap}} < 1600. \\
+1, & \text{si $1600 \le $ \lstinline{gdpPercap} $< 6600$}. \\
+2, & \text{en otro caso.} \\
+\end{cases}
+\]
+?`La nueva variable
+ es categ\'orica (nominal u ordinal) o num\'erica (discreta o continua)? ?`Cambia la respuesta si la variable
+ toma valores ``bajo'', ``medio'' y ``alto'' en lugar de 0, 1, 2?
+
+\item Filtrar el DataFrame de \lstinline{gapminder} para el a\~no 2007. Luego, para ese a\~no, calcular la cantidad de pa\'ises en cada continente. Explorar la función \lstinline{groupBy()} y los métodos \lstinline{size()} y \lstinline{nunique()} de un DataFrame agrupado.
+
+\item Con el mismo filtro que el ejercicio anterior (es decir, s\'olo para el a\~no 2007), crear una variable $gdpAlto$
+ que valga 1 si \lstinline{gdpPercap} es mayor que 2000 d\'olares y 0 si no lo es. Luego crear una tabla de 2 filas y 5 columnas que calcule la cantidad de pa\'ises donde $gdpAlto = 0$ o $gdpAlto = 1$  en cada continente. 
+ 
+ Ayuda 1: para convertir un array de variables booleanas a 0/1 pueden usar \lstinline{.astype(int)} (o en este ejercicio pueden usar una variable booleana en vez de 0/1).
+ 
+ Ayuda 2: si tenemos informaci\'on agrupada por 2 columnas, podemos convertirla a una tabla con la funci\'on \lstinline{unstack()}.
+
+%\item Convertir el vector colores a factor y comprobar que funcion\'o usando la funci\'on \lstinline{class()}. Verificar las categor\'ias creadas usando la funci\'on \lstinline{levels()}.
+%\begin{lstlisting}
+%colores <- c('blue', 'red', 'green', 'red', 'black', 'yellow','blue','blue')
+%\end{lstlisting}
+
+\item En el gr\'afico vemos 11 puntos. Consideramos la media y mediana de la coordenada $x$ de esos puntos y graficamos dos rectas verticales $x = $ media y $x = $ mediana. ?`Cu\'al recta corresponde a la media y cu\'al a la mediana?
 
 \begin{center}
-\includegraphics[scale=0.3]{practica2-img-gapminder-boxplot.png}
+\includegraphics[scale=0.6]{practica2-img-media_mediana_1.png}
 \end{center}
 
-Reproduc\'i el gr\'afico de arriba reemplazando adecuadamente lo que falta en el siguiente c\'odigo:
-\begin{lstlisting}
-p <- ggplot(__COMPLETAR__) +
-  geom___COMPLETAR__(__COMPLETAR__) +
-  ...
-
-p
-\end{lstlisting}
-
-\item Reproducir el siguiente gr\'afico:
+\item Repetimos el mismo procedimiento con otros 30 puntos. Graficamos una l\'inea azul para la media y una l\'inea naranja para la mediana. Uno de los dos gr\'aficos es correcto, ?`cu\'al?
 
 \begin{center}
-\includegraphics[scale=0.3]{practica2-img-gapminder-lifeExp.png}
+\includegraphics[scale=0.5]{practica2-img-media_mediana_2.png}
+\includegraphics[scale=0.5]{practica2-img-media_mediana_3.png}
 \end{center}
 
-\item (de ac\'a en adelante, trabajar con el dataset penguins del paquete palmerpenguins). ?`Cu\'antas filas y columnas hay en el dataset penguins?
 
-\item  Dar una estad\'istica descriptiva de la variable \lstinline{bill_depth_mm}.
+\item Definir funciones que calculen la media y mediana de un vector de valores num\'ericos.
 
-\item Hacer un \lstinline{scatterplot} de \lstinline{bill_depth_mm} (en el eje $y$) vs. \lstinline{bill_length_mm} (en el eje $x$).
+\item Probar las funciones definidas con las variables num\'ericas utilizando solo los datos del a\~no 2007.
 
-\item ?`Cu\'al ser\'ia un buen geom para ver la relaci\'on entre \lstinline{species} y \lstinline{bill_depth_mm}?
+\item Graficar el producto bruto interno promedio en Am\'erica en funci\'on del a\~no.
 
-\item Corregir el siguiente c\'odigo:
-\begin{lstlisting}
-ggplot(data = penguins) +
-  geom_point()
-\end{lstlisting}
+\item Definir desv\'io est\'andar. ?`Por qu\'e las diferencias en el numerador est\'an elevada al cuadrado? Escribir una funci\'on de Python que calcule el desv\'io est\'andar. Comparar el resultado de usar la funci\'on \lstinline{np.std()}.
 
-\item ?`Qu\'e significa el argumento \lstinline{na.rm} en \lstinline{geom_point()}? Usando el dataset de \lstinline{palmerpenguins} crear un gr\'afico donde se requiera usar ese argumento como \lstinline{TRUE}.
-
-\item Agregar un ``caption'' al gr\'afico de arriba. Ayuda: Mirar la documentaci\'on de \lstinline{labs()}.
-
-\item Recrear la siguiente visualizaci\'on. ?`A qu\'e aes deber\'ia mapearse \lstinline{bill_depth_mm}? ?`El mapeo debe ser global o local?
-\begin{center}
-\includegraphics[scale=0.3]{practica2-img-penguins-mass.png}
-\end{center}
-
-\item Sin correr el c\'odigo, predecir qu\'e gr\'afico produce.
-\begin{lstlisting}
-ggplot(data = penguins,
-       mapping = aes(x = flipper_length_mm, y = body_mass_g, color = island) ) +
-  geom_point() +
-  geom_smooth(se = FALSE)
-\end{lstlisting}
-
-\item Sin correr el c\'odigo, ?`estos dos gr\'aficos van a ser iguales o diferentes? ?`Por qu\'e?
-\begin{lstlisting}
-# grafico 1
-ggplot(
-  data = penguins,
-  mapping = aes(x = flipper_length_mm, y = body_mass_g)
-) +
-  geom_point() +
-  geom_smooth()
-
-# grafico 2
-ggplot() +
-  geom_point(
-    data = penguins,
-    mapping = aes(x = flipper_length_mm, y = body_mass_g)
-  ) +
-  geom_smooth(
-    data = penguins,
-    mapping = aes(x = flipper_length_mm, y = body_mass_g)
-  )
-\end{lstlisting}
-
-\item Sin correr el c\'odigo, predecir qu\'e gr\'afico produce.
-\begin{lstlisting}
-ggplot(data = penguins,
-       mapping = aes(x = flipper_length_mm, y = body_mass_g, color = island) ) +
-  geom_point() +
-  geom_smooth(se = FALSE)
-\end{lstlisting}
-
-\item Sin correr el c\'odigo, ?`estos dos gr\'aficos van a ser iguales o diferentes? ?`Por qu\'e?
-\begin{lstlisting}
-# grafico 1
-ggplot(
-  data = penguins,
-  mapping = aes(x = flipper_length_mm, y = body_mass_g)
-) +
-  geom_point() +
-  geom_smooth()
-
-# grafico 2
-ggplot() +
-  geom_point(
-    data = penguins,
-    mapping = aes(x = flipper_length_mm, y = body_mass_g)
-  ) +
-  geom_smooth(
-    data = penguins,
-    mapping = aes(x = flipper_length_mm, y = body_mass_g)
-  )
-\end{lstlisting}
-
+\item Calcular el m\'inimo, el m\'aximo y el desv\'io estandar de la expectativa de vida (\lstinline{lifeExp}) entre pa\'ises tomando s\'olo el DataFrame \lstinline{gapminder} para el a\~no 2007.
 \end{enumerate}
+
+%\textbf{\large Archivos de datos}
+%
+%\begin{enumerate}[resume]
+%\item La biblioteca \lstinline{Pandas} nos permite tambi\'en trabajar con archivos de datos.
+%
+%\begin{enumerate}
+%\item Leer el archivo \lstinline{casos_coronavirus.csv}.
+%\item Graficar la curva de casos por d\'ia.
+%\item Graficar la curva de casos acumulados.
+%\item Definir $y$ como el logaritmo de la cantidad de casos acumulados y graficar $y$ en funci\'on de la cantidad de d\'ias transcurridos.
+%\item Tomando dos valores, estimar la pendiente de la recta para los datos a partir del dia 30.
+%\end{enumerate}
+%
+%Utilicen el siguiente c\'odigo para leer el archivo.
+%
+%\begin{lstlisting}
+%import pandas as pd
+%datos = pd.read_csv("casos_coronavirus.csv")   # dataFrame
+%datos
+%\end{lstlisting}
+
 
 \end{document}
 
